--- a/index.html
+++ b/index.html
@@ -5,50 +5,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <title>HomeWork 1</title>
 </head>
 <body>
+
+    <!--  Header  -->
     <header>
-        <nav>
-            <a href="">WebStudio</a>
-            <ul>
-                <li><a href="" rel="noopener noreferrer nofollow">Студія</a></li>
-                <li><a href="" rel="noopener noreferrer nofollow">Портфоліо</a></li>
-                <li><a href="" rel="noopener noreferrer nofollow">Контакти</a></li>
+        <nav class="navigation">
+            <a class="logo-header" href="index.html"><span>Web</span>Studio</a>
+            <ul class="nav-menu">
+                <li class="nav-menu-element"><a class="current" href="./index.html" rel="noopener noreferrer nofollow">Студія</a></li>
+                <li class="nav-menu-element"><a href="./portfolio.html" rel="noopener noreferrer nofollow">Портфоліо</a></li>
+                <li class="nav-menu-element"><a href="" rel="noopener noreferrer nofollow">Контакти</a></li>
             </ul>
         </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="header-contacts">
+            <li class="header-contacts-element"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="header-contacts-element"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
-        <section>
+
+        <!--  Hero  -->
+        <section class="hero">
             <h1>Ефективні рішення для вашого бізнесу</h1>
             <button type="button">Замовити послугу</button>
         </section>
-        <section>
-            <h2>Особливості</h2>
-           <ul>
-                <li>
+
+        <!--  Features  -->
+        <section class="features">
+            <h2 class="visually-hidden">Особливості</h2>
+            <ul>
+                <li class="features-element">
                     <h3>Увага до деталей</h3>
                     <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
-                <li>
+                <li class="features-element">
                     <h3>Пунктуальність</h3>
                     <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
-                <li>
+                <li class="features-element">
                     <h3>Планування</h3>
                     <p>Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
-                <li>
+                <li class="features-element">
                     <h3>Планування</h3>
                     <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
-           </ul>
+            </ul>
         </section>
-        <section>
+
+        <!--  What we do  -->
+        <section class="work">
             <h2>Чим ми займаємося</h2>
             <ul>
                 <li><img src="./img/webstudio-img-1.jpg" alt="typing" width="370" height="295"></li>
@@ -56,25 +66,27 @@
                 <li><img src="./img/webstudio-img-3.jpg" alt="color-matching" width="370" height="295"></li>
             </ul>
         </section>
-        <section>
+
+        <!--  Our team  -->
+        <section class="team">
             <h2>Наша команда</h2>
             <ul>
-                <li>
+                <li class="team-member">
                     <img src="./img/member-1.jpg" alt="Ihor Dem`yanenko" width="270" height="270">
                     <h3>Ігор Дем'яненко</h3>
                     <p>Product Designer</p>
                 </li>
-                <li>
+                <li class="team-member">
                     <img src="./img/member-2.jpg" alt="Olha Repina" width="270" height="270">
                     <h3>Ольга Рєпіна</h3>
                     <p>Frontend Developer</p>
                 </li>
-                <li>
+                <li class="team-member">
                     <img src="./img/member-3.jpg" alt="Mikola Tarasov" width="270" height="270">
                     <h3>Микола Тарасов</h3>
                     <p>Marketing</p>
                 </li>
-                <li>
+                <li class="team-member">
                     <img src="./img/member-4.jpg" alt="Mykhaylo Ermakov" width="270" height="270">
                     <h3>Михайло Єрмаков</h3>
                     <p>UI Designer</p>
@@ -82,13 +94,15 @@
             </ul>
         </section>
     </main>
+
+    <!--  Footer  -->
     <footer>
-        <a href="">WebStudio</a>
+        <a class="footer-logo" href="index.html"><span>Web</span>Studio</a>
         <address>
-            <ul>
+            <ul class="address">
                 <li><a href="https://goo.gl/maps/MACRbHeHQyC5bs3L6">м. Київ, пр-т Лесі Українки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li class="footer-contacts-element"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="footer-contacts-element"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
