--- a/portfolio.html
+++ b/portfolio.html
@@ -1,14 +1,115 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <title>Portfolio</title>
 </head>
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+        <nav class="navigation">
+            <a class="logo-header" href="index.html"><span>Web</span>Studio</a>
+            <ul class="nav-menu">
+                <li class="nav-menu-element"><a href="./index.html" rel="noopener noreferrer nofollow">Студія</a></li>
+                <li class="nav-menu-element"><a class="current" href="./portfolio.html" rel="noopener noreferrer nofollow">Портфоліо</a></li>
+                <li class="nav-menu-element"><a href="" rel="noopener noreferrer nofollow">Контакти</a></li>
+            </ul>
+        </nav>
+        <ul class="header-contacts">
+            <li class="header-contacts-element"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="header-contacts-element"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+    </header>
+    <main>
+        <section>
+            <h1 class="visually-hidden">Портфоліо</h1>
+            <ul>
+                <li><button type="button">Усі</button></li>
+                <li><button type="button">Веб-сайти</button></li>
+                <li><button type="button">Додатки</button></li>
+                <li><button type="button">Дизайн</button></li>
+                <li><button type="button">Маркетинг</button></li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="">
+                        <img src="./img/portfolio-1.jpg" alt="web-site" width="370" height="295">
+                        <h2>Технокряк</h2>
+                        <p>Веб-сайт</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./img/portfolio-2.jpg" alt="poster" width="370" height="295">
+                        <h2>Постер New Orlean vs Golden Star</h2>
+                        <p>Дизайн</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./img/portfolio-3.jpg" alt="restaurant-logo" width="370" height="295">
+                        <h2>Ресторан Seafood</h2>
+                        <p>Додаток</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./img/portfolio-4.jpg" alt="headphones" width="370" height="295">
+                        <h2>Проєкт Prime</h2>
+                        <p>Маркетинг</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./img/portfolio-5.jpg" alt="boxes" width="370" height="295">
+                        <h2>Проєкт Boxes</h2>
+                        <p>Додаток</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./img/portfolio-6.jpg" alt="site-on-iMac" width="370" height="295">
+                        <h2>Inspiration has no Borders</h2>
+                        <p>Веб-сайт</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./img/portfolio-7.jpg" alt="book" width="370" height="295">
+                        <h2>Видання Limited Edition</h2>
+                        <p>Дизайн</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./img/portfolio-8.jpg" alt="label" width="370" height="295">
+                        <h2>Проєкт LAB</h2>
+                        <p>Маркетинг</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./img/portfolio-9.jpg" alt="typing" width="370" height="295">
+                        <h2>Growing Business</h2>
+                        <p>Додаток</p>
+                    </a>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <a href="index.html">WebStudio</a>
+        <address>
+            <ul>
+                <li><a href="https://goo.gl/maps/MACRbHeHQyC5bs3L6">м. Київ, пр-т Лесі Українки, 26</a></li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
+        </address>
+    </footer>
 </body>
 </html>
