added portfolio styles

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <footer>
         <a class="footer-logo" href="index.html"><span>Web</span>Studio</a>
         <address>
-            <ul class="address">
+            <ul class="address-info">
                 <li><a href="https://goo.gl/maps/MACRbHeHQyC5bs3L6">м. Київ, пр-т Лесі Українки, 26</a></li>
                 <li class="footer-contacts-element"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li class="footer-contacts-element"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
