--- a/portfolio.html
+++ b/portfolio.html
@@ -25,73 +25,74 @@
         </ul>
     </header>
     <main>
-        <section>
+
+        <section class="portfolio">
             <h1 class="visually-hidden">Портфоліо</h1>
             <ul>
-                <li><button type="button">Усі</button></li>
-                <li><button type="button">Веб-сайти</button></li>
-                <li><button type="button">Додатки</button></li>
-                <li><button type="button">Дизайн</button></li>
-                <li><button type="button">Маркетинг</button></li>
+                <li class="filter"><button type="button">Усі</button></li>
+                <li class="filter"><button type="button">Веб-сайти</button></li>
+                <li class="filter"><button type="button">Додатки</button></li>
+                <li class="filter"><button type="button">Дизайн</button></li>
+                <li class="filter"><button type="button">Маркетинг</button></li>
             </ul>
             <ul>
-                <li>
+                <li class="portfolio-element">
                     <a href="">
                         <img src="./img/portfolio-1.jpg" alt="web-site" width="370" height="295">
                         <h2>Технокряк</h2>
                         <p>Веб-сайт</p>
                     </a>
                 </li>
-                <li>
+                <li class="portfolio-element">
                     <a href="">
                         <img src="./img/portfolio-2.jpg" alt="poster" width="370" height="295">
                         <h2>Постер New Orlean vs Golden Star</h2>
                         <p>Дизайн</p>
                     </a>
                 </li>
-                <li>
+                <li class="portfolio-element">
                     <a href="">
                         <img src="./img/portfolio-3.jpg" alt="restaurant-logo" width="370" height="295">
                         <h2>Ресторан Seafood</h2>
                         <p>Додаток</p>
                     </a>
                 </li>
-                <li>
+                <li class="portfolio-element">
                     <a href="">
                         <img src="./img/portfolio-4.jpg" alt="headphones" width="370" height="295">
                         <h2>Проєкт Prime</h2>
                         <p>Маркетинг</p>
                     </a>
                 </li>
-                <li>
+                <li class="portfolio-element">
                     <a href="">
                         <img src="./img/portfolio-5.jpg" alt="boxes" width="370" height="295">
                         <h2>Проєкт Boxes</h2>
                         <p>Додаток</p>
                     </a>
                 </li>
-                <li>
+                <li class="portfolio-element">
                     <a href="">
                         <img src="./img/portfolio-6.jpg" alt="site-on-iMac" width="370" height="295">
                         <h2>Inspiration has no Borders</h2>
                         <p>Веб-сайт</p>
                     </a>
                 </li>
-                <li>
+                <li class="portfolio-element">
                     <a href="">
                         <img src="./img/portfolio-7.jpg" alt="book" width="370" height="295">
                         <h2>Видання Limited Edition</h2>
                         <p>Дизайн</p>
                     </a>
                 </li>
-                <li>
+                <li class="portfolio-element">
                     <a href="">
                         <img src="./img/portfolio-8.jpg" alt="label" width="370" height="295">
                         <h2>Проєкт LAB</h2>
                         <p>Маркетинг</p>
                     </a>
                 </li>
-                <li>
+                <li class="portfolio-element">
                     <a href="">
                         <img src="./img/portfolio-9.jpg" alt="typing" width="370" height="295">
                         <h2>Growing Business</h2>
@@ -102,12 +103,12 @@
         </section>
     </main>
     <footer>
-        <a href="index.html">WebStudio</a>
+        <a class="footer-logo" href="index.html"><span>Web</span>Studio</a>
         <address>
-            <ul>
+            <ul class="address-info">
                 <li><a href="https://goo.gl/maps/MACRbHeHQyC5bs3L6">м. Київ, пр-т Лесі Українки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li class="footer-contacts-element"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="footer-contacts-element"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
