--- a/portfolio.html
+++ b/portfolio.html
@@ -28,14 +28,14 @@
 
         <section class="portfolio">
             <h1 class="visually-hidden">Портфоліо</h1>
-            <ul>
+            <ul class="filters">
                 <li class="filter"><button type="button">Усі</button></li>
                 <li class="filter"><button type="button">Веб-сайти</button></li>
                 <li class="filter"><button type="button">Додатки</button></li>
                 <li class="filter"><button type="button">Дизайн</button></li>
                 <li class="filter"><button type="button">Маркетинг</button></li>
             </ul>
-            <ul>
+            <ul class="portfolio-list">
                 <li class="portfolio-element">
                     <a href="">
                         <img src="./img/portfolio-1.jpg" alt="web-site" width="370" height="295">
