--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <!--  Features  -->
         <section class="features">
             <h2 class="visually-hidden">Особливості</h2>
-            <ul>
+            <ul class="features-all">
                 <li class="features-element">
                     <h3>Увага до деталей</h3>
                     <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
@@ -60,7 +60,7 @@
         <!--  What we do  -->
         <section class="work">
             <h2>Чим ми займаємося</h2>
-            <ul>
+            <ul class="work-list">
                 <li><img src="./img/webstudio-img-1.jpg" alt="typing" width="370" height="295"></li>
                 <li><img src="./img/webstudio-img-2.jpg" alt="design" width="370" height="295"></li>
                 <li><img src="./img/webstudio-img-3.jpg" alt="color-matching" width="370" height="295"></li>
@@ -70,7 +70,7 @@
         <!--  Our team  -->
         <section class="team">
             <h2>Наша команда</h2>
-            <ul>
+            <ul class="team-members">
                 <li class="team-member">
                     <img src="./img/member-1.jpg" alt="Ihor Dem`yanenko" width="270" height="270">
                     <h3>Ігор Дем'яненко</h3>
