--- a/index.html
+++ b/index.html
@@ -14,24 +14,24 @@
     <!--  Header  -->
     <header>
         <nav class="navigation">
-            <a class="logo-header" href="index.html"><span>Web</span>Studio</a>
+            <a class="logo-header" href="index.html"><span class="logo-header-blue">Web</span>Studio</a>
             <ul class="nav-menu">
-                <li class="nav-menu-element"><a class="current" href="./index.html" rel="noopener noreferrer nofollow">Студія</a></li>
-                <li class="nav-menu-element"><a href="./portfolio.html" rel="noopener noreferrer nofollow">Портфоліо</a></li>
-                <li class="nav-menu-element"><a href="" rel="noopener noreferrer nofollow">Контакти</a></li>
+                <li class="nav-menu-element"><a class="nav-menu-link current" href="./index.html">Студія</a></li>
+                <li class="nav-menu-element"><a class="nav-menu-link" href="./portfolio.html">Портфоліо</a></li>
+                <li class="nav-menu-element"><a class="nav-menu-link" href="">Контакти</a></li>
             </ul>
         </nav>
         <ul class="header-contacts">
-            <li class="header-contacts-element"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="header-contacts-element"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li class="header-contacts-element"><a class="header-contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="header-contacts-element"><a class="header-contacts-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
 
         <!--  Hero  -->
         <section class="hero">
-            <h1>Ефективні рішення для вашого бізнесу</h1>
-            <button type="button">Замовити послугу</button>
+            <h1 class="hero-heading">Ефективні рішення для вашого бізнесу</h1>
+            <button class="hero-button" type="button">Замовити послугу</button>
         </section>
 
         <!--  Features  -->
@@ -39,27 +39,27 @@
             <h2 class="visually-hidden">Особливості</h2>
             <ul class="features-all">
                 <li class="features-element">
-                    <h3>Увага до деталей</h3>
-                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                    <h3 class="features-heading">Увага до деталей</h3>
+                    <p class="featurs-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
                 <li class="features-element">
-                    <h3>Пунктуальність</h3>
-                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                    <h3 class="features-heading">Пунктуальність</h3>
+                    <p class="featurs-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
                 <li class="features-element">
-                    <h3>Планування</h3>
-                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                    <h3 class="features-heading">Планування</h3>
+                    <p class="featurs-text">Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
                 <li class="features-element">
-                    <h3>Планування</h3>
-                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                    <h3 class="features-heading">Планування</h3>
+                    <p class="featurs-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
         </section>
 
         <!--  What we do  -->
         <section class="work">
-            <h2>Чим ми займаємося</h2>
+            <h2 class="work-heading">Чим ми займаємося</h2>
             <ul class="work-list">
                 <li><img src="./img/webstudio-img-1.jpg" alt="typing" width="370" height="295"></li>
                 <li><img src="./img/webstudio-img-2.jpg" alt="design" width="370" height="295"></li>
@@ -69,27 +69,27 @@
 
         <!--  Our team  -->
         <section class="team">
-            <h2>Наша команда</h2>
+            <h2 class="team-heading">Наша команда</h2>
             <ul class="team-members">
                 <li class="team-member">
                     <img src="./img/member-1.jpg" alt="Ihor Dem`yanenko" width="270" height="270">
-                    <h3>Ігор Дем'яненко</h3>
-                    <p>Product Designer</p>
+                    <h3 class="member-name">Ігор Дем'яненко</h3>
+                    <p class="member-job">Product Designer</p>
                 </li>
                 <li class="team-member">
                     <img src="./img/member-2.jpg" alt="Olha Repina" width="270" height="270">
-                    <h3>Ольга Рєпіна</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="member-name">Ольга Рєпіна</h3>
+                    <p class="member-job">Frontend Developer</p>
                 </li>
                 <li class="team-member">
                     <img src="./img/member-3.jpg" alt="Mikola Tarasov" width="270" height="270">
-                    <h3>Микола Тарасов</h3>
-                    <p>Marketing</p>
+                    <h3 class="member-name">Микола Тарасов</h3>
+                    <p class="member-job">Marketing</p>
                 </li>
                 <li class="team-member">
                     <img src="./img/member-4.jpg" alt="Mykhaylo Ermakov" width="270" height="270">
-                    <h3>Михайло Єрмаков</h3>
-                    <p>UI Designer</p>
+                    <h3 class="member-name">Михайло Єрмаков</h3>
+                    <p class="member-job">UI Designer</p>
                 </li>
             </ul>
         </section>
@@ -97,12 +97,12 @@
 
     <!--  Footer  -->
     <footer>
-        <a class="footer-logo" href="index.html"><span>Web</span>Studio</a>
+        <a class="logo-footer" href="index.html"><span class="logo-footer-blue">Web</span>Studio</a>
         <address>
             <ul class="address-info">
-                <li><a href="https://goo.gl/maps/MACRbHeHQyC5bs3L6">м. Київ, пр-т Лесі Українки, 26</a></li>
-                <li class="footer-contacts-element"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="footer-contacts-element"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li><a class="footer-contacts footer-contacts-map" href="https://goo.gl/maps/MACRbHeHQyC5bs3L6">м. Київ, пр-т Лесі Українки, 26</a></li>
+                <li><a class="footer-contacts footer-contacts-info" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="footer-contacts footer-contacts-info" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
